@@ -280,7 +280,7 @@ class FSNamesystem implements FSConstants {
         
     // The web-server port can be ephemeral... ensure we have the correct info
     this.infoPort = this.infoServer.getPort();
-    conf.set("dfs.info.port", this.infoPort); 
+    conf.setInt("dfs.info.port", this.infoPort); 
     LOG.info("Web-server up at: " + conf.get("dfs.info.port"));
   }
 
