@@ -126,8 +126,8 @@ public abstract class NotificationTestCase extends HadoopTestCase {
   protected JobConf createJobConf() {
     JobConf conf = super.createJobConf();
     conf.set("job.end.notification.url", getNotificationUrlTemplate());
-    conf.set("job.end.retry.attempts", 3);
-    conf.set("job.end.retry.interval", 200);
+    conf.setInt("job.end.retry.attempts", 3);
+    conf.setInt("job.end.retry.interval", 200);
     return conf;
   }
 
